# music_library_simple_service

./: .gitignore  pyproject.toml  settings.yml
src/: main.py
src/application/: __init__.py  app.py  server.py
src/application/entities/: enums.py
src/application/providers/: __init__.py  database_provider.py  repositories.py  use_case_provider.py
src/application/use_cases/: command_use_caces.py  queries_use_caces.py
src/domain/entities/: artist.py  base.py
src/domain/repositories/: artist.py
src/infrastructure/database/: database_adapter.py
src/infrastructure/database/models/: __init__.py  _base.py  artist.py
src/infrastructure/database/repositories/common/: write_repository.py
src/infrastructure/database/repositories/implementation/artist/: read_repository.py  write_repository.py
src/infrastructure/repositories/common/: read_repository.py
src/infrastructure/repositories/implementation/artist/: read_repository.py  write_repository.py
src/presentation/models/: _common.py  _filter.py  artist.py
src/presentation/routers/: artist.py
