[project]
name = "music-library"
version = "0.0.2"
description = ""
authors = [
    {name = "timmashkov",email = "bodomizer@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "dynaconf (>=3.2.12,<4.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "fastapi-filter (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
